contrast error fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,9 +151,15 @@ nav ul {
   display: flex;
   flex-direction: column;
   text-align: center;
-  background: #00c2de;
+  background: #76d2e1;
   padding: 1rem;
   border-radius: 4px;
+}
+
+.upgrade-item a {
+  color:black;
+  font-weight: 700;
+  text-decoration: underline;
 }
 
 .upgrade-item img {
